--- a/java/Algorithms/pom.xml
+++ b/java/Algorithms/pom.xml
@@ -2,20 +2,21 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <!-- mvn archetype:generate 
     		-DgroupId=com.lidia.algorithms 
-    		-DartifactId=CodilityExercises 
+    		-DartifactId=Algorithms 
     		-DarchetypeArtifactId=maven-archetype-quickstart 
     		-DinteractiveMode=false
     		https://mkyong.com/maven/how-to-create-a-java-project-with-maven/
     		
     mvn clean package
-    java  -jar target/CodilityExercises-1.0-SNAPSHOT.jar
+    java  -jar target/Algorithms-1.0-SNAPSHOT.jar
      -->
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.lidia.algorithms</groupId>
-  <artifactId>CodilityExercises</artifactId>
+  <artifactId>Algorithms</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>CodilityExercises</name>
+  <name>Algorithms</name>
   <url>http://maven.apache.org</url>
   
   <properties>
@@ -39,16 +40,15 @@
 					<goals>
 						<goal>shade</goal>
 					</goals>
-					<!--  
 					<configuration>
 						<transformers>
 							<transformer
 								implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-								<mainClass>com.lidia.algorithms.PermMissingElem</mainClass>
+								<mainClass>com.lidia.java7.FormingMagicSquare</mainClass>
 							</transformer>
 						</transformers>
-					</configuration> -->
-					<configuration>
+					</configuration>
+					<!-- <configuration>
                         <finalName>Benchmark</finalName>
                         <transformers>
                             <transformer
@@ -56,20 +56,26 @@
                                 <mainClass>org.openjdk.jmh.Main</mainClass>
                             </transformer>
                         </transformers>
-                    </configuration>
+                    </configuration> -->
 				</execution>
 			</executions>
 		</plugin>
 
 	</plugins>
 </build>
-  
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.7.0</version>
+        <scope>test</scope>
     </dependency>
     <!-- Dependency for hashing -->
     <!-- https://search.maven.org/artifact/commons-codec/commons-codec/1.11/jar -->
